--- a/index.html
+++ b/index.html
@@ -67,31 +67,48 @@
 
   <div class="pt-5 pb-5" style="background-color: #f2f2f2;">
     <div class="container">
-      <div class="row">
-        <div class="section-head col-sm-12" id="service">
-          <h1>Our Services</h1>
-          <p>We help you to build high-quality digital solutions and products as well as deliver a wide range of related professional services. We are providing world-class service to our clients.
-            </p>
+        <div class="row">
+            <div class="section-head col-sm-12" id="service">
+                <h1>Our Services</h1>
+                <p>We help you to build high-quality digital solutions and products as well as deliver a wide range of related professional services. We are providing world-class service to our clients.</p>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="item"> <span class="icon feature_box_col_one"><i class="fa fa-laptop"></i></span>
+                    <h6>Web App Development</h6>
+                    <p>Our Custom Web Development Services Include Both Front-End And Back-End Development. Whether It Is Enhancing An Existing App Or Architecting An Enterprise App, Our Developers Are Up For The Challenge.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="item"> <span class="icon feature_box_col_two"><i class="fa fa-android"></i></span>
+                    <h6>Mobile App Development</h6>
+                    <p>We Have Expertise In Creating Multi-Platform Mobile App Solutions For Both Android And IOS Devices. Using PhoneGap, Xamarin, And React Native, We Offer Custom Mobile App That Runs Smoothly On Multiple Platforms.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="item"> <span class="icon feature_box_col_three"><i class="fa fa-magic"></i></span>
+                    <h6>Digital Marketing</h6>
+                    <p>The digital marketing services that we provide have their own set of charms. By taking our digital marketing services, our clients will be able to increase visibility and engage with their customers at the online platform.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="item"> <span class="icon feature_box_col_four"><i class="fa fa-line-chart"></i></span>
+                    <h6>SEO and Content Marketing</h6>
+                    <p>Our SEO and content marketing services help your business rank higher on search engines, driving more organic traffic and increasing online visibility.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="item"> <span class="icon feature_box_col_five"><i class="fa fa-lightbulb-o"></i></span>
+                    <h6>IT Consultancy</h6>
+                    <p>Providing expert guidance and strategic advice on IT infrastructure, digital transformation, and technology optimization for your business.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-pencil"></i></span>
+                    <h6>Graphic Design</h6>
+                    <p>We bring your ideas to life with visually appealing designs that capture attention and communicate your brand effectively to your audience.</p>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_one"><i class="fa fa-laptop"></i></span>
-            <h6>Web App Development</h6>
-            <p>Our Custom Web Development Services Include Both Front-End And Back-End Development. Whether It Is Enhancing An Existing App Or Architecting An Enterprise App, Our Developers Are Up For The Challenge.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_two"><i class="fa fa-android"></i></span>
-            <h6>Mobile App Development</h6>
-            <p>We Have Expertise In Creating Multi-Platform Mobile App Solutions For Both Android And IOS Devices. Using PhoneGap, Xamarin, And React Native, We Offer Custom Mobile App That Runs Smoothly On Multiple Platforms.</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_three"><i class="fa fa-magic"></i></span>
-            <h6>Digital Marketing</h6>
-            <p>The digital marketing services that we provide have their own set of charms. By taking our digital marketing services, our clients will be able to increase visibility and engage with their customers at the online platform.</p>
-          </div>
-        </div>
-      </div>
     </div>
 </div>
 
