first commit of company website

--- a/careers.html
+++ b/careers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkillSphere Ventures Company Website</title>
+    <title>CalabrixTech Company Website</title>
     <link rel="stylesheet" href="./css/careers.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3299593258379115"
      crossorigin="anonymous"></script>
@@ -46,7 +46,7 @@
 
     <section id="career-heading" class="career-heading">
         <h1 class="heading">Career</h1>
-        <p>Job Opening in SkillSphere Ventures Company. Apply Now!</p>
+        <p>Job Opening in CalabrixTech Company. Apply Now!</p>
     </section>
     <div class="career">
         <div class="career-form">
@@ -192,7 +192,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
-                    Copyright &copy; 2024 SkillSphere Ventures. All Rights Reserved.
+                    Copyright &copy; 2024 CalabrixTech. All Rights Reserved.
                 </div>
             </div>
         </div>
