--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <!-- SEO Meta Tags -->
     <title>CalabrixTech | Web & Mobile Development for Business Growth</title>
     <meta name="description"
-        content="CalabrixTech specializes in web and mobile development, offering scalable, user-friendly digital solutions for businesses to grow and succeed online.">
+        content="CalabrixTech offers expert web and mobile development services, leveraging cutting-edge technologies like React, Django, and Flutter to help businesses scale and succeed online.">
     <meta name="keywords"
-        content="web development, mobile app development, React, Django, Flutter, business growth, digital solutions, software development">
+        content="web development, mobile app development, React, Django, Flutter, software solutions, digital transformation, business growth, UX/UI design">
     <meta name="author" content="CalabrixTech">
     <link rel="canonical" href="https://calabrix-tech-company.vercel.app">
 
     <!-- Open Graph Meta Tags (For Social Media Previews) -->
     <meta property="og:title" content="CalabrixTech | Web & Mobile Development Experts" />
     <meta property="og:description"
-        content="Boost your business with expert web and mobile app development. We create scalable and user-friendly digital solutions." />
-    <meta property="og:image" content="https://calabrix-tech-company.vercel.app/image.png" />
+        content="Boost your business with high-quality web and mobile app development. We create scalable, user-friendly digital solutions tailored to your needs." />
+    <meta property="og:image" content="https://i.imgur.com/QpNyWmU.png" />
     <meta property="og:url" content="https://calabrix-tech-company.vercel.app" />
     <meta property="og:type" content="website" />
 
@@ -27,8 +27,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="CalabrixTech - Web & Mobile Solutions">
     <meta name="twitter:description"
-        content="We develop custom web and mobile solutions to help businesses scale and grow online.">
-    <meta name="twitter:image" content="https://calabrix-tech-company.vercel.app/image.png">
+        content="We specialize in custom web and mobile solutions to help businesses innovate and thrive in the digital space.">
+    <meta name="twitter:image" content="https://i.imgur.com/QpNyWmU.png">
 
     <!-- Google Site Verification -->
     <meta name="google-site-verification" content="ACMoFFsQh4HoERaLxiv2vqSmjznuYYc2FW4VslvaqHI" />
@@ -38,15 +38,15 @@
 
     <!-- CSS Files (Optimized) -->
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJrBW5E6hzF/T2o2m8aJhQqYzVgqFK5aQ/lXklPpW3ui" crossorigin="anonymous">
     <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
     <!-- JavaScript Files -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3299593258379115"
         crossorigin="anonymous"></script>
     <script src="./js/main.js" defer></script>
